close #187 fixing minor mobile styling issues

--- a/_layouts/story.html
+++ b/_layouts/story.html
@@ -4,7 +4,7 @@ layout: page
 
 
 
-<div class="image-header-bg container" style="background-image: url('../{{ page.image }}') !important;">
+<div class="image-header-bg container col-12" style="background-image: url('../{{ page.image }}') !important;">
 
 
 
