--- a/_sass/_gigs.scss
+++ b/_sass/_gigs.scss
@@ -62,6 +62,10 @@
 
 // ------- containers --------//
 
+.row {
+    margin: 0;
+}
+
 .container-gigs {
     text-align: center;
     margin: 100px auto 0 auto;
