--- a/_sass/_mobile.scss
+++ b/_sass/_mobile.scss
@@ -110,19 +110,29 @@
 
 
     // Stories and Gigs
-    
+
     // This is most likely not the best way to go about making these
     // items responsive, but for not, this is our solution.
     // But don't worry, I'll note this down, and return at a later date.
 
     .image-header-bg {
-        max-width: 97.5%;
-        margin-top: 60px !important;
+        max-width: 100%;
+        height: 350px !important;
     }
 
     .story-content {
-        max-width: 100% !important;
-        padding: 0 10px !important; 
+        max-width: 95% !important;
+        padding: 0 10px !important;
+    }
+
+    .story-card {
+        padding: 0;
+        margin: 0;
+        margin-bottom: 20px;
+    }
+
+    .story-header {
+        height: 350px !important;
     }
 
     .gig_container .row {
