close #188 finxing font size issues

--- a/_sass/_bootstrap-overrides.scss
+++ b/_sass/_bootstrap-overrides.scss
@@ -35,3 +35,8 @@ form {
     box-shadow: 0 0 0 0.2rem rgba(240, 95, 64, .5) !important;
   }
 }
+
+.container-fluid {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+}
