--- a/_sass/_mobile.scss
+++ b/_sass/_mobile.scss
@@ -5,7 +5,7 @@
     /* Sections */
 
     .bg-primary {
-        padding: 0;
+        padding: 0 !important;
     }
 
     #fullpage {
@@ -131,8 +131,14 @@
         margin-bottom: 20px;
     }
 
-    .story-header {
-        height: 350px !important;
+    .stories_container {
+        h2 {
+            font-size: 4em !important;
+        }
+
+        h3 {
+            font-size: 25px;
+        }
     }
 
     .gig_container .row {
