close #201 another minor cleanup

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,7 @@
 <head>
 
-  <!-- meta -->
+  <!-- Meta -->
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta itemprop="description" name="description" content="{% if page.description %}{{ page.description | truncate: 160 }}{% else %}{{ site.description | truncate: 160 }}{% endif %}" />
@@ -21,7 +22,7 @@
   <meta property="article:published_time" content="{{ page.date }}" />
   <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
   
-  <!-- touch icons -->
+  <!-- Touch icons -->
   
   <link rel="apple-touch-icon" href="/img/icons/apple-touch-icon.png" />
   <link rel="apple-touch-icon" sizes="57x57" href="/img/icons/apple-touch-icon-57x57.png" />
@@ -49,24 +50,27 @@
   </title>
   
   <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css" integrity="sha384-PDle/QlgIONtM1aqA2Qemk5gPOE7wFq8+Em+G/hmo5Iq0CCmYZLv3fVRDJ4MMwEA"
-  crossorigin="anonymous">
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css" integrity="sha384-PDle/QlgIONtM1aqA2Qemk5gPOE7wFq8+Em+G/hmo5Iq0CCmYZLv3fVRDJ4MMwEA" crossorigin="anonymous">
   
   <!-- Custom fonts for this template -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-  crossorigin="anonymous">
-  
-  <!-- Plugin CSS -->
-  <!-- favicon -->
-  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+  <!-- Favicon -->
+
+  <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
+
   <!-- Custom styles for this template -->
+
   <link href="/css/main.css" rel="stylesheet">
+
   <!-- Fullpage.js scripts -->
+
   <link rel="stylesheet" href="/css/fullpage.css">
 
-  <!-- feed -->
+  <!-- Feed -->
 
   <link rel="alternate" title="{{ site.title }}" type="application/json" href="{{ "/feed.json" prepend: site.url }}" />
   
   </head>
-  
