--- a/_sass/_stories.scss
+++ b/_sass/_stories.scss
@@ -8,7 +8,7 @@
     padding: 0 0 30px 0;
 
     a {
-        color: #1a2336;
+        color: $prolikeblue;
         text-decoration: none;
     }
 
@@ -66,7 +66,7 @@
         font-weight: 700;
 
         a {
-            color: #1a2336;
+            color: $prolikeblue;
             text-decoration: none;
         }
 
