close #202 refactor css

--- a/_sass/_bootstrap-overrides.scss
+++ b/_sass/_bootstrap-overrides.scss
@@ -1,4 +1,4 @@
-// Bootstrap overrides for this template
+// Overides for default Bootstrap styling
 
 .container-fluid {
   padding-left: 0 !important;
