--- a/_sass/_connect.scss
+++ b/_sass/_connect.scss
@@ -17,13 +17,13 @@
     }
 
     .connect-form {
-        padding: 0 75px 75px 75px;
+        padding: 75px;
         display: flex;
         align-items: center;
 
         h1 {
             font-size: 6.5vh;
-            color: #ffffff;
+            color: $white;
             margin-left: -5px;
             text-transform: initial;
         }
@@ -58,7 +58,7 @@
 
         h2 {
             font-size: 2.5vh;
-            color: white;
+            color: $white;
         }
 
         p {
@@ -74,6 +74,8 @@
         }
     }
 }
+
+/* Small devices (phones, 768px and down) */
 
 @media (max-width: 768px) {
 
