--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -11,7 +11,7 @@
     a {
         font-size: 20px;
         display: block;
-        color: #ffffff;
+        color: $white;
     }
 
     a:hover {
@@ -20,7 +20,7 @@
     }
 
     .col-lg {
-        color: #ffffff;
+        color: $white;
         font-size: 20px;
     }
 }
