--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -1,5 +1,3 @@
-// Global styling for this template
-
 body,
 html {
   width: 100%;
@@ -16,31 +14,6 @@ hr {
   border-color: $primary;
 }
 
-hr.light {
-  border-color: $white;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  @include title-font;
-}
-
-.bg-primary {
-  background-color: $primary !important;
-}
-
-.bg-dark {
-  background-color: $gray-900 !important;
-}
-
-.text-faded {
-  color: fade-out($white, .3);
-}
-
 section {
   padding: 0 75px;
   padding-top: 65px !important;
@@ -50,24 +23,16 @@ section {
   margin-top: 0;
 }
 
-::-moz-selection {
-  color: $white;
-  background: $gray-900;
-  text-shadow: none;
-}
+/* Small devices (phones, 768px and down) */
 
-::selection {
-  color: $white;
-  background: $gray-900;
-  text-shadow: none;
-}
+@media (max-width: 768px) {
 
-img::selection {
-  color: $white;
-  background: transparent;
-}
+  .btn {
+    font-size: 14px !important;
+    margin-top: 0;
+  }
 
-img::-moz-selection {
-  color: $white;
-  background: transparent;
+  .call {
+    margin-left: 0;
+  }
 }
