--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -1,5 +1,3 @@
-// Navigation css
-
 .navbar {
   background-color: $prolikeblue !important;
   color: #ffffff;
@@ -44,12 +42,14 @@ button:focus {
 
 
 /* Popup container */
+
 .popup {
   cursor: pointer;
   overflow: auto;
 }
 
 /* The actual popup (appears on top) */
+
 .popuptext {
   visibility: hidden;
   position: absolute;
@@ -162,5 +162,59 @@ button:focus {
 
     font-size: 1rem;
     padding-top: 25px;
+  }
+}
+
+/* Small devices (phones, 768px and down) */
+
+@media (max-width: 768px) {
+
+  .navbar {
+    padding: 0 15px;
+  }
+
+  .col-sm-4 {
+    height: 20px;
+    width: auto;
+    padding: 0;
+  }
+
+  #fp-nav.fp-right {
+    display: none;
+  }
+
+  .contact {
+
+    h1 {
+      font-size: 18px;
+    }
+
+    a {
+      font-size: 18px;
+    }
+
+    .row .col {
+      margin-bottom: 50px;
+    }
+  }
+
+  .modal-content ul li a {
+    font-size: 2em !important;
+  }
+
+  .col-xs-6 {
+    max-width: 50%;
+    font-size: 15px !important;
+    margin-bottom: 30px;
+
+
+    a {
+      font-size: 15px !important;
+    }
+
+    h1 {
+      font-size: 15px;
+    }
+
   }
 }
