--- a/_sass/_stories.scss
+++ b/_sass/_stories.scss
@@ -58,7 +58,7 @@
     .tags {
         padding: 2px 5px 2px 5px;
         background-color: $prolikeyellow;
-        color: white;
+        color: $white;
         border-radius: 2px;
         display: inline;
         font-size: 11px;
@@ -176,5 +176,44 @@
 
     p {
         font-size: 16px;
+    }
+}
+
+/* Small devices (phones, 768px and down) */
+
+@media only screen and (max-width: 768px) {
+
+    // This is most likely not the best way to go about making these
+    // items responsive, but for not, this is our solution.
+    // But don't worry, I'll note this down, and return at a later date.
+
+    .image-header-bg {
+        max-width: 100%;
+        height: 350px !important;
+    }
+
+    .story-content {
+        max-width: 95% !important;
+        padding: 0 10px !important;
+    }
+
+    .story-card {
+        padding: 0;
+        margin: 0;
+        margin-bottom: 20px;
+    }
+
+    .stories_container {
+        h2 {
+            font-size: 4em !important;
+        }
+
+        h3 {
+            font-size: 25px;
+        }
+    }
+
+    .gig_container .row {
+        width: 100%;
     }
 }
