close #205 minor mobile styling fix

--- a/_layouts/story.html
+++ b/_layouts/story.html
@@ -2,7 +2,7 @@
 layout: page
 ---
 
-<div class="image-header-bg container col-12" style="background-image: url('../{{ page.image }}') !important;">
+<div class="image-header-bg container col-12" style="background-image: url('{{ page.image }}') !important;">
 </div>
 
 <div class="container story-content">
