close #209 make back go back

--- a/_includes/scripts/plugins.html
+++ b/_includes/scripts/plugins.html
@@ -10,7 +10,7 @@
 
 <!-- Fullpage.js plugin scripts -->
 
-<script src="/js/ini.js"></script>
+<script src="/js/initialize.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.4/vendors/easings.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.4/vendors/scrolloverflow.min.js"></script>
