close #210 rework footer setup

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,7 +7,7 @@ layout: default
 {{content}}
 
 <div class="ourfooter contact">
-  {% include components/contact.html
+  {% include components/footer.html
         title="Let's get in touch!"
         caption="Ready to start your next project with us?</br>
         ...or are you a yipee - who want to get onboard?</br>
