--- a/css/main.scss
+++ b/css/main.scss
@@ -7,7 +7,7 @@
 @import "bootstrap-overrides.scss";
 @import "sections.scss";
 @import "navigation.scss";
-@import "contact.scss";
+@import "footer.scss";
 @import "gigs.scss";
 @import "stories.scss";
 @import "picture.scss";
