close #211 fix footer flaw

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@ layout: default
 
 {{content}}
 
-<div class="ourfooter contact">
+<div class="ourfooter footer">
   {% include components/footer.html
         title="Let's get in touch!"
         caption="Ready to start your next project with us?</br>
