close #212 making footer text smaller

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -33,3 +33,12 @@
         width: 100%;
     }
 }
+
+@media (max-width: 768px) {
+    .footer {
+
+        h1 {
+            font-size: 17px;
+        }
+    }
+}
