--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,27 +18,36 @@
     })(window,document,'script','dataLayer','GTM-NSLZT72');</script>
     <!-- End Google Tag Manager -->
 
+<!-- Jekyll invironment variable -->
+
+    {% if jekyll.environment == "production" %}
+      {% assign site_prefix = site.prod_site %}
+    {% else %}
+      {% assign site_prefix = site.stage_site %}
+    {% endif %}
+
+
   <!-- Meta -->
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta itemprop="description" name="description" content="{% if page.description %}{{ page.description | truncate: 160 }}{% else %}{{ site.description | truncate: 160 }}{% endif %}" />
+  <meta itemprop="description" name="description" content="{% if page.description %}{{ page.description | truncate: 160 }}{% else %}{{ page.content | truncate: 160 }}{% endif %}" />
   <meta name="author" content="Prolike">
   <meta name="keywords" content="Continuous Delivery, Agile, Docker"
   
-  <link rel="canonical" href="{{ site.url}}{{ page.url }}">
+  <link rel="canonical" href="{{ site_prefix }}{{ page.url }}">
   
   <!-- Open Graph tags -->
   
   <meta property="og:locale" content="en_US">
   <meta property="og:title" content="{%if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
-  <meta property="og:url" content="{{ site.url}}{{ page.url }}">
-  <meta property="og:image" content="{% if page.image %}{{ site.url }}{{ page.image | remove: '..' }}{% else %}{{ site.url }}{{ site.image }}{% endif %}" />
+  <meta property="og:url" content="{{ site_prefix }}{{ page.url }}">
+  <meta property="og:image" content="{% if page.image %}{{ site_prefix }}{{ page.image | remove: '..' }}{% else %}{{ site_prefix }}{{ site.image }}{% endif %}" />
   <meta property="og:site_name" content="{{ site.title }}">
   <meta property="article:publisher" content="https://www.linkedin.com/company/prolike/" />
   <meta property="article:author" content="https://www.linkedin.com/company/prolike/" />
   <meta property="article:published_time" content="{{ page.date }}" />
-  <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
+  <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ page.content }}{% endif %}">
   
   <!-- Touch icons -->
   
@@ -55,7 +64,7 @@
   <!-- Twitter Card tags -->
   
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:image" content="{% if page.image %}{{ site.url }}{{ page.image | remove: '..' }}{% else %}{{ site.url }}{{ site.image }}{% endif %}"
+  <meta name="twitter:image" content="{% if page.image %}{{ site_prefix }}{{ page.image | remove: '..' }}{% else %}{{ site_prefix }}{{ site.image }}{% endif %}"
   <meta name="twitter:title" content="{%if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
   <meta name="twitter:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
   
