close #198 setup prolike jekyll infrastructure

--- a/_includes/components/primary.html
+++ b/_includes/components/primary.html
@@ -41,10 +41,10 @@
           <div class="col-lg-8">
             <h2 class="section-heading">{{title}}</h2>
             <p class="text-faded mb-4">{{caption}}</p>
-            <a id="{{ btn_id }}" class="btn btn-light btn-xl js-scroll-trigger btn_i" href="{{btn_href || strip || strip_newlines}}"
+            <a id="{{ btn_id_call | strip | strip_newlines }}" class="btn btn-light btn-xl js-scroll-trigger btn_i" href="{{btn_href || strip || strip_newlines}}"
               data-proofer-ignore>{{btn_txt || strip || strip_newlines}}</a>
-            <a id="{{ btn_id_call }}" class="btn call btn-light btn-xl js-scroll-trigger btn_i" href="{{btn_href-call || strip || strip_newlines}}"
-              data-proofer-ignore>{{btn_txt-call || strip || strip_newlines}}</a>
+            <a id="{{ btn_id_call | strip | strip_newlines }}" class="btn call btn-light btn-xl js-scroll-trigger btn_i" href="{{btn_href-call || strip || strip_newlines}}"
+            data-proofer-ignore>{{btn_txt-call || strip || strip_newlines}}</a>
           </div>
         </div>
       </div>
