close #231 write blogpost about using prose io

--- a/_sass/_stories.scss
+++ b/_sass/_stories.scss
@@ -138,23 +138,30 @@
         min-width: 100% !important;
         border-color: $prolikeyellow;
     }
-
-    h2 {
+    h1 {
         padding-bottom: 0;
         text-transform: uppercase;
-        font-size: 20px;
+        font-size: 25px;
         font-weight: 600;
         padding: 20px 0 10px 0;
     }
 
+    h2 {
+        padding: 20px 0 10px 0;
+        text-transform: uppercase;
+        font-size: 20px;
+        font-weight: 600;
+    }
+
     h3 {
-        padding: 10px 0;
+        padding: 20px 0 10px 0;
         font-weight: bold;
+        text-transform: uppercase;
         font-size: 17px !important;
     }
 
     h4 {
-        padding: 10px 0;
+        padding: 20px 0 10px 0;
         font-weight: bold;
         font-size: 15px !important;
         text-transform: uppercase;
