close #234 making infographics page

--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -9,7 +9,7 @@
           <li><a href="/#why" data-proofer-ignore>Why</a></li>
           <li> <a href="/#how" data-proofer-ignore>How</a></li>
           <li> <a href="/#what" data-proofer-ignore>What</a></li>
-          <li> <a href="/gigs/" data-proofer-ignore>Gigs</a></li>
+          <li> <a href="/infographics/" data-proofer-ignore>Infographics</a></li>
           <li> <a href="/stories/" data-proofer-ignore>Stories</a></li>
         </ul>
       </span>
