--- a/_includes/head.html
+++ b/_includes/head.html
@@ -76,6 +76,8 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"/>
 
+  <link rel="stylesheet" href="https://use.typekit.net/dee0mal.css">
+
 
   <!-- Favicon -->
 
