close #239 another round of responsiveness

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
+
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
+
 <!--[if !IE]><!-->
 
 <html lang="en">
-  
+
 <!--<![endif]-->
 
 {% include head.html %}
 
 <body id="page-top">
-  
+
   <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NSLZT72"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NSLZT72" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+
   <!-- End Google Tag Manager (noscript) -->
 
   {{ content }}
+
 </body>
 
 </html>
