--- a/_sass/_flow.scss
+++ b/_sass/_flow.scss
@@ -10,31 +10,82 @@
         font-weight: bold;
     }
 
-    h1, p {
-        opacity: 0;
-    }
-
     .slide {
         width: 100%;
         height: 100vh;
-        margin: 0 auto;
-        position: relative;
     }
 
+    .slide1, .slide2, .slide3, .slide4, .slide5, .slide6, .slide7, .slide8  {
+        margin-top: 20%;
+    }
+
+    @media only screen and (max-width: 768px) {
+    
+        .slide1, .slide2, .slide3, .slide4, .slide5, .slide6, .slide7, .slide8  {
+            margin-top: 50%;
+        }
+    }
 
     .row {
         text-align: center;
     }
 
     a {
-        opacity: 0;
+        text-decoration: none;
     }
 
     a p {
         color: black;
-        opacity: 1;
         text-align: center;
         margin-top: 5%;
     }
+
+    section {
+        padding: 10px !important;
+    }
+
+    .btn {
+        background: $prolikeyellow;
+        color: $prolikeblue;
+        font-weight: 700;
+        border-radius: 0em;
+        margin-top: .5em;
+        border: none;
+        position: relative;
+        font-size: 20px;
+        cursor: pointer;
+        outline: none;
+        text-transform: uppercase;
+        padding: 10px;
+      }
+    
+      .btn:hover {
+        background: $white;
+      }
+    
+      .btn:before,
+      .btn:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 4px;
+        width: 0;
+        background: $prolikeyellow;
+        transition: 400ms ease all;
+      }
+    
+      .btn:after {
+        right: inherit;
+        top: inherit;
+        left: 0;
+        bottom: 0;
+      }
+    
+      .btn:hover:before,
+      .btn:hover:after {
+        width: 100%;
+        transition: 800ms ease all;
+      }
 
 }
