--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -10,6 +10,8 @@
           <li> <a href="/#how" data-proofer-ignore>How</a></li>
           <li> <a href="/#what" data-proofer-ignore>What</a></li>
           <li> <a href="/infographics/" data-proofer-ignore>Infographics</a></li>
+          <li> <a href="/bootcamp/" data-proofer-ignore>Bootcamp</a></li>
+          <li> <a href="/services/" data-proofer-ignore>Services</a></li>
           <li> <a href="/stories/" data-proofer-ignore>Stories</a></li>
         </ul>
       </span>
