close #249 create page services

--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -9,8 +9,8 @@
           <li><a href="/#why" data-proofer-ignore>Why</a></li>
           <li> <a href="/#how" data-proofer-ignore>How</a></li>
           <li> <a href="/#what" data-proofer-ignore>What</a></li>
-          <li> <a href="/infographics/" data-proofer-ignore>Infographics</a></li>
-          <li> <a href="/bootcamp/" data-proofer-ignore>Bootcamp</a></li>
+          <li> <a href="/flow/" data-proofer-ignore>Infographics</a></li>
+<!--           <li> <a href="/bootcamp/" data-proofer-ignore>Bootcamp</a></li> -->
           <li> <a href="/services/" data-proofer-ignore>Services</a></li>
           <li> <a href="/stories/" data-proofer-ignore>Stories</a></li>
         </ul>
