--- a/_sass/_flow.scss
+++ b/_sass/_flow.scss
@@ -1,6 +1,6 @@
 .slide-container {
     font-family: 'Montserrat', sans-serif;
-    background-color: black;
+    background-color: $prolikeblue;
     color: white;
     overflow-x: hidden;
     width: 100%;
