--- a/_sass/_infographics.scss
+++ b/_sass/_infographics.scss
@@ -2,7 +2,7 @@
 
     height: 100vh;
     width: 100%;
-    background: #111111;
+    background-color: $prolikeblue;
     padding: 0 90px;
     display: flex;
     justify-content: center;
