--- a/_sass/_flow.scss
+++ b/_sass/_flow.scss
@@ -1,11 +1,16 @@
 
-.slide-container {
+// body {
+// 	scroll-snap-type: y;
+// }
+
+.slide {
     font-family: 'Montserrat', sans-serif;
     background-color: $prolikeblue;
     color: white;
     overflow-x: hidden;
     width: 100%;
-    height: auto;
+    height: 100vh;
+   // scroll-snap-align: start;
 
     h1 {
         font-weight: bold;
@@ -13,7 +18,6 @@
 
     .slide {
         width: 100%;
-        height: 100vh;
     }
 
     .slide1,
@@ -24,7 +28,7 @@
     .slide6,
     .slide7,
     .slide8 {
-        margin-top: 20%;
+        margin-top: 0%;
     }
 
     @media only screen and (max-width: 768px) {
@@ -37,8 +41,9 @@
         .slide6,
         .slide7,
         .slide8 {
-            margin-top: 50%;
+            margin-top: 25%;
         }
+
     }
 
     .row {
