close #256 another another styling fix

--- a/_includes/components/footer.html
+++ b/_includes/components/footer.html
@@ -19,7 +19,7 @@
     {% endcapture %}
 
     <section class="bg-primary" id="{{sectionid || strip || strip_newlines}}">
-      <div class="container-fluid">
+      <div class="container">
         <div class="row">
           <div class="col-lg col-xs-6">
             <h1>Navigation</h1>
