--- a/_includes/head.html
+++ b/_includes/head.html
@@ -70,13 +70,17 @@
 <!-- Page Title -->
 
   <title>
-    {%if page.title %}
-    {{ page.title }}
+    {% if layout.subpage %}
+    {{page.title}} - {{layout.subpage}} - {{site.title}}
+    {% elsif page.title == "Prolike" %}
+      {{ site.title }}
     {% else %}
-    {{ site.title }}
-    {% endif %}
-  </title>
+      {{ page.title }} - {{ site.title }}
+    {% endif %}  
 
+    
+  </title>
+  
 <!-- Bootstrap core CSS -->
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css" integrity="sha384-PDle/QlgIONtM1aqA2Qemk5gPOE7wFq8+Em+G/hmo5Iq0CCmYZLv3fVRDJ4MMwEA" crossorigin="anonymous">
