close #258 implement projects prolike on prolike io

--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -1,6 +1,6 @@
 <!-- Navigation -->
 <div class="pos-f-t">
-  <nav class="navbar navbar-dark bg-dark"><a class="navbar-brand" href="https://www.prolike.io"><img class="col-sm-4"
+  <nav class="navbar navbar-dark bg-dark"><a class="navbar-brand" href="/"><img class="col-sm-4"
         alt="Prolike" src="/images/logos/prolike-logo.png"></a>
     <div class="popup" onclick="myFunction()"> <i class="fas fa-bars"></i>
       <span class="popuptext" id="myPopup">
@@ -13,6 +13,8 @@
 <!--           <li> <a href="/bootcamp/" data-proofer-ignore>Bootcamp</a></li> -->
           <li> <a href="/services/" data-proofer-ignore>Services</a></li>
           <li> <a href="/stories/" data-proofer-ignore>Stories</a></li>
+          <li> <a href="https://github.com/login/oauth/authorize?client_id=44203f7dbb6402bb922b&redirect_uri=http://192.168.99.100/login/" data-proofer-ignore>Log in</a></li>
+          
         </ul>
       </span>
     </div>
