close #258 implement projects prolike on prolike io

--- a/_layouts/customer.html
+++ b/_layouts/customer.html
@@ -6,7 +6,7 @@ layout: page
 
 {{ content }}
 
-<img class="profile-picture" src="#">
+<img class="profile-picture" alt="profile-picture" src="#">
 <div class="new-issue-box">
         <p>Last opened issue:</p>
         <h2 class="ni-number">#</h2>
