--- a/css/main.scss
+++ b/css/main.scss
@@ -14,4 +14,5 @@
 @import "connect.scss";
 @import "flow.scss";
 @import "services.scss";
-@import "forms.scss"
+@import "forms.scss";
+@import "bootcamp.scss";
